--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/yargs": "^17.0.28",
     "chalk": "^4.1.2",
     "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
